[package]
authors = ["Muhammad Anjum Kaiser <anjumbutt@gmail.com>"]
name = "store-backend"
version = "0.1.0"

[[bin]]
name = "store-backend"
path = "src/bin/store-backend/main.rs"

[[bin]]
name = "store-backend-setup"
path = "src/bin/store-backend-setup/main.rs"

[[bin]]
name = "store-email-notifier-daemon"
path = "src/bin/store-email-notifier-daemon/main.rs"

[dependencies]
argon2rs = "0.2.5"
bcrypt = "0.1.3"
bincode = "0.8.0"
bodyparser = "0.7.0"
bson = "0.9.0"
dotenv = "0.10.1"
formdata = "0.12.2"
hostname = "0.1.3"
hyper = "0.10.13"
hyper-native-tls = "0.2.4"
native-tls = "0.1.4"
iron = "0.5.1"
iron-csrf = "0.2.4"
iron-sessionstorage = "0.6.6"
iron-slog = "0.0.1"
jsonwebtoken = "2.0.3"
lettre = "0.7.0"
lettre_email = "0.7.0"
mime = "0.3.3"
mongodb = "0.3.3"
mqtt = "0.1.3"
oauth2 = "1.1.2"
params = "0.6.0"
persistent = "0.3.0"
protobuf = "1.4.1"
r2d2 = "0.8.0"
r2d2-diesel = "0.99.0"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.7.0"
redis = "0.8.0"
rmp-serde = "0.13.6"
router = "0.5.1"
rpassword = "1.0.2"
rprompt = "1.0.3"
serde = "1.0.12"
serde-protobuf = "0.6.0"
serde_cbor = "0.6.1"
serde_derive = "1.0.12"
serde_json = "1.0.2"
serde_urlencoded = "0.5.1"
serde_xml = "0.9.1"
serde_yaml = "0.7.1"
set = "0.1.1"
slog = "2.0.9"
slog-json = "2.0.2"
std-logger = "0.2.0"
toml = "0.4.5"
url = "1.5.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "uuid",
    "serde_json",
]
version = "0.99.0"


[dependencies.multipart]
features = ["iron"]
version = "0.13.3"

[dependencies.postgres]
features = [
    "with-uuid",
    "with-chrono",
]
version = "0.15.1"

[dependencies.uuid]
features = [
    "serde",
    "v4",
    "v5",
]
version = "0.5.1"

[lib]
name = "common"
path = "src/lib/common/lib.rs"
