[package]
authors = ["Muhammad Anjum Kaiser <anjumbutt@gmail.com>"]
name = "store-backend"
version = "0.1.0"

[[bin]]
name = "store-backend"
path = "src/bin/store-backend/main.rs"

[[bin]]
name = "store-backend-setup"
path = "src/bin/store-backend-setup/main.rs"

[[bin]]
name = "store-email-notifier-daemon"
path = "src/bin/store-email-notifier-daemon/main.rs"

[dependencies]
argon2rs = "0.2.5"
bcrypt = "0.1.5"
bincode = "0.9.2"
bodyparser = "0.8.0"
bson = "0.11.0"
dotenv = "0.10.1"
formdata = "0.12.2"
hostname = "0.1.4"
hyper = "0.10.13"
hyper-native-tls = "0.2.4"
native-tls = "0.1.5"
iron = "0.6.0"
iron-csrf = "0.3.1"
iron-sessionstorage = "0.6.6"
iron-slog = "0.0.1"
jsonwebtoken = "4.0.0"
lettre = "0.7.0"
lettre_email = "0.7.0"
mime = "0.3.5"
mongodb = "0.3.7"
mqtt = "0.1.4"
oauth2 = "1.1.2"
params = "0.8.0"
persistent = "0.4.0"
protobuf = "1.4.3"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.7.0"
redis = "0.8.0"
rmp-serde = "0.13.7"
router = "0.6.0"
rpassword = "2.0.0"
rprompt = "1.0.3"
serde = "1.0.27"
serde-protobuf = "0.7.0"
serde_cbor = "0.8.1"
serde_derive = "1.0.27"
serde_json = "1.0.9"
serde_urlencoded = "0.5.1"
serde_xml = "0.9.1"
serde_yaml = "0.7.3"
set = "0.1.1"
slog = "2.1.1"
slog-json = "2.2.0"
std-logger = "0.2.0"
toml = "0.4.5"
url = "1.6.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "uuid",
    "serde_json",
]
version = "1.1.1"


[dependencies.multipart]
features = ["iron"]
version = "0.13.6"

[dependencies.postgres]
features = [
    "with-uuid",
    "with-chrono",
]
version = "0.15.1"

[dependencies.uuid]
features = [
    "serde",
    "v4",
    "v5",
]
version = "0.5.1"

[lib]
name = "common"
path = "src/lib/common/lib.rs"
